Change z-index to fix bug at mobile in form edit

--- a/source/assets/stylesheets/locastyle/modules/_buttons.sass
+++ b/source/assets/stylesheets/locastyle/modules/_buttons.sass
@@ -119,4 +119,4 @@
 .ls-group-btn-right
   float: right
   position: relative
-  z-index: 2
+  z-index: 4
